// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test snapshot of SelectCode with no options should render 1`] = `
<WithStyles(FormControl)>
  <WithStyles(WithFormControlContext(InputLabel))
    htmlFor="age-simple"
  >
    Age
  </WithStyles(WithFormControlContext(InputLabel))>
  <WithStyles(WithFormControlContext(Select))
    inputProps={
      Object {
        "id": "age-simple",
        "name": "age",
      }
    }
    onChange={[Function]}
    value=""
  />
</WithStyles(FormControl)>
`;

exports[`test snapshot of SelectCode with one option should render 1`] = `
<WithStyles(FormControl)>
  <WithStyles(WithFormControlContext(InputLabel))
    htmlFor="age-simple"
  >
    Age
  </WithStyles(WithFormControlContext(InputLabel))>
  <WithStyles(WithFormControlContext(Select))
    inputProps={
      Object {
        "id": "age-simple",
        "name": "age",
      }
    }
    onChange={[Function]}
    value="_id1"
  >
    <WithStyles(MenuItem)
      value="_id1"
    >
      _id1
    </WithStyles(MenuItem)>
  </WithStyles(WithFormControlContext(Select))>
</WithStyles(FormControl)>
`;

exports[`test snapshot of SelectCode with two options should render 1`] = `
<WithStyles(FormControl)>
  <WithStyles(WithFormControlContext(InputLabel))
    htmlFor="age-simple"
  >
    Age
  </WithStyles(WithFormControlContext(InputLabel))>
  <WithStyles(WithFormControlContext(Select))
    inputProps={
      Object {
        "id": "age-simple",
        "name": "age",
      }
    }
    onChange={[Function]}
    value="_id1"
  >
    <WithStyles(MenuItem)
      value="_id1"
    >
      _id1
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      value="_id2"
    >
      _id2
    </WithStyles(MenuItem)>
  </WithStyles(WithFormControlContext(Select))>
</WithStyles(FormControl)>
`;
